--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Exclude Warp helper file
+WARP.md
+
 # Prerequisites
 *.d
 
@@ -53,3 +56,6 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+#Mac Files
+.DS_Store
